--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -7,4 +7,5 @@
     background-attachment: fixed;
     background-size: cover;
     background-color: rgba(34, 40, 49, 0.55);
+    border-radius: 15px 15px 0px 0px
 }
