--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,8 +3,15 @@
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #222831;
+    background-color: rgba(34, 40, 49, 0.93);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+.ButtonDiv{
+}
+
+
 
 
 
@@ -13,8 +20,9 @@
     color: #d3d3d3;
     padding: 7px;
     text-align: left;
-    font-size: 30px;
+    font-size: 35px;
     font-family: azonix;
+
 
 }
 
