--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 
 .App {
   text-align: center;
-
+  background-image: url("./background1-min.jpg");
+  min-height: 110vh;
+  min-width: 100vh;
+  background-size: cover;
 }
 
 .footer{
@@ -13,12 +16,23 @@
 }
 
 
+/*body{*/
+/*  min-height: 1080px;*/
+/*}*/
 
-body{
-  background-image: url("./background1.jpg");
-  background-attachment: fixed;
-  background-size: cover;
+.filter{
+  backdrop-filter: blur(10px);
+  z-index: 1;
+  min-height: inherit;
+  /*background-color: rgb(239, 13, 13);*/
+  /*position: fixed;*/
 }
+
+/*.bg-image{*/
+
+/*}*/
+
+
 
 
 
