--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -1,11 +1,11 @@
 .Box{
-    position: relative;
-    top: 380px;
-    width: 100%;
-    height: 1000px;
+    position: fixed;
+    top: 40vh;
+    min-width: 100%;
+    min-height: 100%;
     /*background-image: url("../slanted-gradient.svg");*/
     background-attachment: fixed;
     background-size: cover;
-    background-color: rgba(17, 6, 28, 0.4);
-    border-radius: 15px 15px 0px 0px
+    background-color: rgba(129, 129, 129, 0.13);
+    border-radius: 15px 15px 0px 0px;
 }
