--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   text-align: center;
   background-image: url("./background1-min.jpg");
   min-height: 110vh;
-  min-width: 100vh;
+  /*min-width: 100vw;*/
   background-size: cover;
 }
 
@@ -21,11 +21,23 @@
 /*}*/
 
 .filter{
+  top: 0;
   backdrop-filter: blur(10px);
   z-index: 1;
   min-height: inherit;
+  animation: hue-animation 60s infinite;
   /*background-color: rgb(239, 13, 13);*/
   /*position: fixed;*/
+}
+
+@keyframes hue-animation {
+  0% {
+    backdrop-filter: blur(10px) hue-rotate(0deg);
+  }
+
+  100% {
+    backdrop-filter: blur(10px) hue-rotate(45deg);
+  }
 }
 
 /*.bg-image{*/
