--- a/src/components/FakeNavBar.css
+++ b/src/components/FakeNavBar.css
@@ -2,8 +2,8 @@
     z-index: 999;
     position: fixed;
     top: 0;
-    width: 100%;
-    height: 7.365%;
+    min-width: 100vw;
+    min-height: 7.365vh;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.83);
     display: flex;
