--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,7 +2,7 @@
     z-index: 1000;
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 100vw;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0);
     display: flex;
