--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
 .filter{
   top: 0;
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   z-index: 1;
   min-height: inherit;
   animation: hue-animation 60s infinite;
@@ -33,10 +34,12 @@
 @keyframes hue-animation {
   0% {
     backdrop-filter: blur(10px) hue-rotate(0deg);
+    -webkit-backdrop-filter: blur(10px) hue-rotate(0deg);
   }
 
   100% {
     backdrop-filter: blur(10px) hue-rotate(45deg);
+    -webkit-backdrop-filter: blur(10px) hue-rotate(45deg);
   }
 }
 
