--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,12 @@
     backdrop-filter: blur(10px) hue-rotate(0deg);
     -webkit-backdrop-filter: blur(10px) hue-rotate(0deg);
   }
-
-  100% {
+  50% {
     backdrop-filter: blur(10px) hue-rotate(45deg);
+    -webkit-backdrop-filter: blur(10px) hue-rotate(0deg);
+  }
+  100% {
+    backdrop-filter: blur(10px) hue-rotate(0deg);
     -webkit-backdrop-filter: blur(10px) hue-rotate(45deg);
   }
 }
